# MuJoCo-drones-gym

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.cpu  README.md  docker-compose.cpu.yml  docker-compose.yml  enjoy.py  enjoy_jax.py  enjoy_sbx.py  enjoy_v2.py  evaluate_policy.py  export_onnx.py  infer_onnx_demo.py  inspect_tensorboard.py  measure_time_travel.py  pod_train_single_rl_jax.py  pyproject.toml  render_demos.py  render_demos2.py  tensorboard_result.txt  test_oom.py  test_scan_jax.py  train_gate_rl.py  train_single_rl.py  train_single_rl_jax.py  train_single_rl_sbx.py  train_single_rl_sbx_mjx.py  train_single_rl_v2.py  tune_gate_navigation.py  verify_env.py  verify_env_jax.py
.jax_cache/: jit_generate_eval_unroll-06392cb00cc3576bc2f2d97b3114ffe0399172955f02cddd046fd95ca6d892f6-cache  jit_generate_eval_unroll-06d0f7c586d0d0d65669c310699262e63a70b396d90c782d9eef909dfa2c629d-cache  jit_generate_eval_unroll-07dde7712d7cb4c368d14426e8c8e19cdf43fbf888e3c192f381f88f929c0ac4-cache  jit_generate_eval_unroll-0ba81034b437c8095fe307a0b3a9b4cc55968cbf7f33f4932bfc8c6d131d76e3-cache  jit_generate_eval_unroll-0d643cdb322f421189ed7e3ce3570b1cde4368312484304ee9b2d98e48336317-cache  jit_generate_eval_unroll-121ebe51fd5f80fe7d5484e8ada4d2bd38304437f3922a805cd285cc7ae9de87-cache  jit_generate_eval_unroll-1aa03ef7efa860d47c974ffb989f917bceab5132e051c54817b8d34c2605c25e-cache  jit_generate_eval_unroll-222aa006b211854c92f8e9d774b8eb7ecb617d9351a12fa84a30a4251c5a20e8-cache  jit_generate_eval_unroll-23b1641b5b7c4b6d544069ef11a7bffd12dd80dad1203934910ecbc71e39066c-cache  (+148 more)
(+499 files in other folders)
