[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mj-drones-gym"
version = "1.0.0"
description = "MuJoCo-based multi-drone Gymnasium environments for single and multi-agent RL"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "gymnasium>=0.29.0",
    "mujoco>=3.0.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
rl = ["stable-baselines3>=2.0.0"]
marl = ["pettingzoo>=1.24.0"]
viz = ["matplotlib>=3.5.0"]
gpu = ["jax[cuda12]", "mujoco-mjx>=3.0.0"]
all = [
    "stable-baselines3>=2.0.0",
    "pettingzoo>=1.24.0",
    "matplotlib>=3.5.0",
    "Pillow>=9.0.0",
    "jax[cuda12]",
    "mujoco-mjx>=3.0.0",
]
fork = [
    "brax>=0.14.0",
    "tensorboard>=2.15.0",
    "torch>=2.0.0",
    "mediapy>=1.2.0",
    "opencv-python-headless>=4.8.0",
    "onnxruntime>=1.16.0",
]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["multi_drone_mujoco*"]

[tool.pytest.ini_options]
testpaths = ["multi_drone_mujoco/tests"]
